# event_hub_example

./: Cargo.toml  README.md  dfx.json
src/canisters/emitter/: Cargo.toml  emitter.did
src/canisters/emitter/src/: actor.rs
src/canisters/listener/: Cargo.toml  listener.did
src/canisters/listener/src/: actor.rs
