[package]
name = "listener"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
ic-cdk = "0.4"
ic-cdk-macros = "0.4"
candid = "0.7.13"
serde = "1.0.136"
ic-event-hub = "0.3"
ic-event-hub-macros = "0.3"